Allowing addition of Items to reading list

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,3 +22,8 @@ code {
   color: #fff;
   background-color: #FAAD00 !important;
 }
+
+.MuiBadge-colorPrimary{
+  background-color: #FAAD00 !important;
+
+}
